--- a/src/OTGW-firmware/data/index_dark.css
+++ b/src/OTGW-firmware/data/index_dark.css
@@ -1097,19 +1097,13 @@ body.disable-interaction {
 
 /* Statistics Table */
 .ot-stats-table {
-  width: 100%;
+  width: auto;
+  max-width: none;
   border-collapse: collapse;
   font-size: 13px;
   background-color: #2c2c2e;
   table-layout: fixed;
 }
-
-.ot-stats-table th:nth-child(1) { width: 40px; }  /* Hex */
-.ot-stats-table th:nth-child(2) { width: 40px; }  /* Dec */
-.ot-stats-table th:nth-child(3) { width: 70px; }  /* Direction */
-.ot-stats-table th:nth-child(4) { width: 200px; } /* Description */
-.ot-stats-table th:nth-child(5) { width: 80px; }  /* Interval */
-.ot-stats-table th:nth-child(6) { width: auto; }  /* Value - takes remaining space */
 
 .ot-stats-table th, .ot-stats-table td {
   text-align: left;
@@ -1126,7 +1120,15 @@ body.disable-interaction {
   position: sticky;
   top: 0;
   z-index: 10;
+}
+
+#otStatsTable th {
   cursor: pointer;
+}
+
+.ot-stats-table th .col-resizer:hover,
+.ot-stats-table th .col-resizer.dragging {
+  background-color: #5a5a5c;
 }
 
 .ot-stats-table th:hover {
